# phi_otdr_diploma

./: .gitignore  README.md  pyproject.toml
reports/: summary_baseline.md  summary_detections.md
src/: pipeline.py
src/audit/: __init__.py  __main__.py  scan.py
src/baseline/: __init__.py  artifacts.py  run.py
src/index/: __init__.py  __main__.py  build.py  prepare.py
src/io/: __init__.py  __main__.py  reader.py
src/parser/: __main__.py  batch_usb.py  config.py  core.py  detect_from_aligned.py  io.py  one_file.py  templates.py
src/qc/: __init__.py  __main__.py  report.py  waterfall_batch.py
src/utils/: __init__.py  cache.py  logging_config.py
tests/: test_audit_scan.py  test_cache.py  test_index_build.py  test_processing_index.py
